# critic-orchestrator

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  __init__.py  backends.py  default_workers.py  ghost_backend.py  job_registry.py  mcp_server.py  orchestrator.py  pyproject.toml  smoke_live.py
experiments/: exp_bug_injection.py  exp_variance_bias.py  results_bug_injection.json  results_variance_bias.json
tests/: conftest.py  test_backends.py  test_ghost_backend.py  test_hardening.py  test_job_registry.py  test_mcp_async_tools.py  test_orchestrator_popen.py
