[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critic-orchestrator"
version = "0.3.0"
description = "MCP server that spawns N fresh Claude CLI workers in parallel to adversarially verify a claim/fix. Anti-confabulation layer for Claude Code."
authors = [{name = "Aurelio Caprara", email = "aureliocpr@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "All rights reserved"}
keywords = ["mcp", "claude", "adversarial-review", "code-review", "anti-confabulation"]

dependencies = [
    "mcp>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/aureliocpr-ctrl/critic-orchestrator"

[tool.setuptools]
packages = ["critic_orchestrator", "critic_orchestrator.tests"]
package-dir = {"critic_orchestrator" = ".", "critic_orchestrator.tests" = "tests"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
