[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critic-orchestrator"
version = "0.5.0"
description = "MCP server that spawns adversarial reviewers in parallel (Claude CLI, or any OpenAI-compatible / Anthropic API) to verify a claim/fix. Anti-confabulation layer for AI coding agents."
authors = [{name = "Aurelio Capriello", email = "aureliocpr@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["mcp", "claude", "adversarial-review", "code-review", "anti-confabulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/aureliocpr-ctrl/critic-orchestrator"
Repository = "https://github.com/aureliocpr-ctrl/critic-orchestrator"
Issues = "https://github.com/aureliocpr-ctrl/critic-orchestrator/issues"

[tool.setuptools]
packages = ["critic_orchestrator", "critic_orchestrator.tests"]
package-dir = {"critic_orchestrator" = ".", "critic_orchestrator.tests" = "tests"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
